--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.5'
 
 services:
   bot:
-    context: .
-    dockerfile: ./api/Doc
+    build: ./bot
     volumes:
-      - ./front:/app/src #Check sur la dock pour les slash !
+      - ./bot:/app #Check sur la dock pour les slash !
