--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.5'
 services:
   bot:
     build: ./bot
+    env:
+      - ./bot/.env
     volumes:
       - ./bot:/app #Check sur la dock pour les slash !
 
