--- a/bot/package.json
+++ b/bot/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +21,7 @@
     "eslint": "^8.57.0"
   },
   "dependencies": {
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5"
   }
 }
