chore: update docker compose to launch with build and up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     build: ./bot
     env_file:
       - /bot/.env
-    volumes:
-      - ./bot:/app #Check sur la dock pour les slash !
+    #volumes:
+      #- ./bot:/app #Check sur la dock pour les slash !
 
