--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
   api:
     build: ./episons-api
     env_file:
-      - ./episons-api/.env*
+      - ./episons-api/.env
     volumes:
       - ./episons-api:/app
   db:
     image: postgres:16.0-alpine
     container_name: postgres
-    env_file: config/db.env.example
+    env_file: db/db.env
     volumes:
       - "./db/data:/var/lib/postgresql/data"
     ports:
@@ -24,10 +24,10 @@ services:
   pg-admin:
     image: dpage/pgadmin4:7.8
     container_name: pgadmin
-    env_file: config/pgadmin.env
+    env_file: db/pgadmin.env
     volumes:
       - "./db/pgadmin-data:/var/lib/pgadmin"
     depends_on:
-      - postgres
+      - db
     ports:
       - "7502:80"
