--- a/episons-api/package.json
+++ b/episons-api/package.json
@@ -24,7 +24,9 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
