chore: :tada: add a bot in ts, can ping and redeploy commands

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,5 +1,2 @@
-DISCORD_TOKEN=your-token-goes-here
-
-DISCORD_APP_ID=
-DISCORD_PUBLIC_KEY=
-
+DISCORD_TOKEN=<DISCORD_TOKEN>
+DISCORD_CLIENT_ID=<DISCORD_CLIENT_ID>
