--- a/bot/package.json
+++ b/bot/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "homepage": "https://github.com/fellipeutaka/discord-bot-template",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/fellipeutaka/discord-bot-template.git"
