--- a/episons-api/Dockerfile
+++ b/episons-api/Dockerfile
@@ -2,11 +2,11 @@ FROM node:20
 
 WORKDIR /app
 
-COPY package*.json ./
-
-RUN npm install
+RUN npm install -g @nestjs/cli
 
 COPY . .
+
+RUN npm i
 
 RUN npm run build
 
